# ai

./: README.md  ai  main.py  pyproject.toml  sandbox-run.sh  sandbox.sb
src/ai/: __init__.py  main.py
test/: conftest.py  test_fs_list.py  test_fs_mkdir.py  test_fs_read.py  test_fs_replace.py  test_fs_rm.py  test_fs_search.py  test_fs_stat.py  test_fs_write.py  test_shell.py  test_tools.py
