[project]
name = "ai"
version = "0.1.0"
description = "Command-line AI actor with essential tooling, backed by a local LMStudio"
authors = [{name = "Santiago Lezica"}]
requires-python = ">=3.10"
dependencies = [
    "kagiapi>=0.2.1",
    "lmstudio>=1.5.0",
    "markdownify>=1.2.0",
    "readabilipy>=0.3.0",
    "requests>=2.32.5",
]

[project.scripts]
ai = "ai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
